<resources>
    <string name="coming_soon">Coming Soon...</string>

    <!--    Login Page-->
    <string name="app_name">Seed-Savvy</string>
    <string name="app_logo">App Logo</string>
    <string name="name_txt">Username</string>
    <string name="password_txt">Password</string>
    <string name="switch_txt">Show Password</string>
    <string name="click_login">Login</string>
    <string name="click_create">Create</string>
    <string name="john">John</string>
    <string name="jane">Jane</string>
    <string name="BackButton">Back</string>

<!--    Registration Page-->
    <string name="username">Username</string>
    <string name="user_name">Name</string>
    <string name="user_surname">Surname</string>
    <string name="password">Insert your password</string>
    <string name="password2">Insert your password again</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="register">Register</string>

<!--    Welcome Page -->
    <string name="welcome_txt1">Welcome to the club!</string>
    <string name="welcome_txt2">We present to you the ultimate tool for growers</string>
    <string name="welcome_txt3">Our app is here to help you cultivate and organize your plants effortlessly</string>
    <string name="welcome_txt4">With customizable categories and easy-to-use inventory management</string>
    <string name="welcome_txt5">You can create your own personalized system to track every plant in your collection</string>
    <string name="welcome_txt6">Say goodbye to the chaos of gardening and hello to a streamlined approach to nurturing your green space</string>
    <string name="welcome_txt7">Lets get Growing !!!</string>

    <!--    Main Menu-->
    <string name="main_menu_header">Seed-Savvy</string>
    <string name="cat_click">Create Category</string>
    <string name="item_click">Add Item</string>
    <string name="list_click">View List</string>
    <string name="achieve_click">Achievements</string>
    <string name="goal_click">Goals</string>
    <string name="seasons_click">Season Tracker</string>
    <string name="resource_click">Resources</string>
    <string name="journal_click">Journal</string>
    <string name="setting_click">Setting</string>
    <string name="logout">Logout</string>

<!--    Create Category-->
    <string name="category_header">Create Category:</string>
    <string name="cat_name">Category Name</string>
    <string name="cat_goal">Goal</string>
    <string name="cate_date">Date Created</string>
    <string name="cat_img">Insert Image</string>
    <string name="create_cat">Create Category</string>

    <!--    Add Item-->
    <string name="item_header">Add Seed:</string>
    <string name="select_cat">Select Category:</string>
    <string name="item_name">Seed Name</string>
    <string name="item_description">Description</string>
    <string name="item_date">Date</string>
    <string name="item_season">Seasons</string>
    <string name="summer">Summer</string>
    <string name="winter">Spring</string>
    <string name="autumn">Autumn</string>
    <string name="spring">Winter</string>
    <string name="item_climate">Climate</string>
    <string name="add_item">Add Item</string>


    <!--    View List-->
    <string name="list_header">View Seed List:</string>
    <string name="select_category">Select a Category</string>
    <string name="Search">search item:</string>
    <string name="SeedName">Grow:</string>
    <string name="SeedDesc">search item:</string>
    <string name="SeedSeason">Grow Season:</string>

    <!--    Achievements-->
    <string name="achievements_header">Achievements:</string>
    <string name="firstAchievement">Starter - Add your first item</string>
    <string name="secondAchievement">Collector - Add 3 Items to the App</string>
    <string name="thirdAchievement">Packrat - Add 10 Items to the App</string>

    <!--    Goal-->
    <string name="goal_header">Goal:</string>
    <string name="progress_bar">Progress Bar</string>
    <string name="num">no.</string>

    <!--    Seasons-->
    <string name="season_header">Season Tracker</string>
    <string name="item_tracker">Item Tracker</string>
    <string name="category_tracker">Category Tracker</string>
    <string name="season_yield">Season Yield</string>

    <!--    Journal-->
    <string name="journal_header">Journal</string>
    <string name="my_journal">My Journal</string>
    <string name="add_journal">Add Journal</string>

    <!--    Camera-->
    <string name="camera_title">Camera</string>

</resources>