<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="Autofill">


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:contentDescription="register_image"
                android:id="@+id/imageView"
                android:layout_width="277dp"
                android:layout_height="250dp"
                android:layout_margin="62dp"
                app:srcCompat="@drawable/add_image"
                tools:ignore="HardcodedText" />

            <!-- Username -->
            <EditText
                android:id="@+id/usernameEditText"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/username"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColorHint="#546E7A"
                tools:ignore="Autofill" />

            <!-- Name -->
            <EditText

                android:id="@+id/nameEditText"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/user_name"
                android:minHeight="48dp"
                android:inputType="text"
                android:layout_gravity="center"
                android:textColorHint="#546E7A" />

            <!-- Surname -->
            <EditText
                android:id="@+id/surnameEditText"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/user_surname"
                android:minHeight="48dp"
                tools:ignore="TextContrastCheck"
                android:inputType="text"
                android:layout_gravity="center"
                android:textColorHint="#546E7A" />

            <!-- Password -->
            <EditText
                android:id="@+id/password1"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColorHint="#546E7A" />
            <!-- Password -->
            <EditText
                android:id="@+id/password2"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/password2"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColorHint="#546E7A" />

            <!-- Age -->
            <EditText
                android:id="@+id/ageEditText"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/age"
                android:inputType="number"
                android:minHeight="48dp"
                android:textColorHint="#546E7A" />

            <!-- Gender -->
            <RadioGroup
                android:id="@+id/genderRadioGroup"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <RadioButton
                    android:id="@+id/maleRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/femaleRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female" />
            </RadioGroup>

            <!-- Register Button -->
            <Button
                android:id="@+id/registerButton"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/green"
                android:text="@string/register"
                android:textColor="#311B92"
                android:layout_marginTop="40dp"/>

            <!-- Go Back Button -->
            <Button
                android:id="@+id/goBackButton"
                android:layout_width="200dp"
                android:layout_marginBottom="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/grey"
                android:text="@string/BackButton"
                android:textColor="#283593" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
