<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/item_header"
            android:orientation="vertical"
            android:padding="66dp">

            <TextView
                android:id="@+id/editTextText"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@string/item_header"
                android:textSize="35sp"
                tools:ignore="TextSizeCheck" />
        </LinearLayout>
    </ScrollView>

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="709dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <!-- Category Name -->
            <EditText
                android:id="@+id/category_name_EditText"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="80dp"
                android:layout_marginBottom="20dp"
                android:hint="@string/item_name"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColorHint="#546E7A"
                android:textSize="25sp"
                tools:ignore="Autofill,TextSizeCheck" />

            <!-- Category Goal -->
            <EditText

                android:id="@+id/nameEditText"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/item_description"
                android:minHeight="48dp"
                android:inputType="text"
                android:layout_margin="20dp"
                android:layout_gravity="center"
                android:textColorHint="#546E7A"
                android:importantForAutofill="no"
                android:textSize="25sp"/>

            <!-- Date created -->
            <EditText
                android:id="@+id/surnameEditText"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/item_date"
                android:minHeight="48dp"
                tools:ignore="TextContrastCheck"
                android:inputType="text"
                android:layout_margin="20dp"
                android:layout_gravity="center"
                android:textColorHint="#546E7A"
                android:importantForAutofill="no"
                android:textSize="25sp"/>

            <!-- Insert Image -->
            <Button
                android:id="@+id/cat_img_click"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/black"
                android:layout_margin="50dp"
                android:text="@string/cat_img"
                android:minHeight="48dp"
                android:textColorHint="#546E7A" />
            <!-- Date created -->
            <EditText
                android:id="@+id/seasons"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/item_season"
                android:minHeight="48dp"
                tools:ignore="TextContrastCheck"
                android:inputType="text"
                android:layout_margin="20dp"
                android:layout_gravity="center"
                android:textColorHint="#546E7A"
                android:importantForAutofill="no"
                android:textSize="25sp"/>
            <!-- Date created -->
            <EditText
                android:id="@+id/climate"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/item_climate"
                android:minHeight="48dp"
                tools:ignore="TextContrastCheck"
                android:inputType="text"
                android:layout_margin="20dp"
                android:layout_gravity="center"
                android:textColorHint="#546E7A"
                android:importantForAutofill="no"
                android:textSize="25sp"/>

            <!-- Create Category Button -->
            <Button
                android:id="@+id/create_cat_click"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/item_header"
                android:minHeight="48dp"
                android:text="@string/create_cat"
                android:textColor="#795548"
                android:textColorHint="#546E7A" />

            <Button
                android:id="@+id/back_button_click"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="80dp"
                android:backgroundTint="@color/grey"
                android:minHeight="48dp"
                android:text="@string/BackButton"
                android:textColor="#283593"
                android:textColorHint="#546E7A" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>