<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/Yellow"
            android:orientation="vertical"
            android:padding="66dp">

            <TextView
                android:id="@+id/editTextText"
                android:layout_width="285dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@string/category_header"
                android:textSize="35dp" />
        </LinearLayout>
    </ScrollView>

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="709dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <!-- Username -->
            <EditText
                android:id="@+id/category_name_EditText"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/username"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColorHint="#546E7A"
                tools:ignore="Autofill" />

            <!-- Name -->
            <EditText

                android:id="@+id/nameEditText"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/user_name"
                android:minHeight="48dp"
                android:inputType="text"
                android:layout_gravity="center"
                android:textColorHint="#546E7A" />

            <!-- Surname -->
            <EditText
                android:id="@+id/surnameEditText"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/user_surname"
                android:minHeight="48dp"
                tools:ignore="TextContrastCheck"
                android:inputType="text"
                android:layout_gravity="center"
                android:textColorHint="#546E7A" />

            <!-- Password -->
            <EditText
                android:id="@+id/password1"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColorHint="#546E7A" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>