<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/journal_header"
            android:orientation="vertical"
            android:padding="66dp">

            <!-- RelativeLayout to position TextView and ImageView -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/editTextText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:ems="10"
                    android:text="@string/journal_header"
                    android:textSize="35sp"
                    tools:ignore="TextSizeCheck" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/coming_soon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="30dp"
                android:ems="10"
                android:text="@string/coming_soon"
                android:textSize="35sp"
                tools:ignore="TextSizeCheck" />

            <!-- First Row -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <!-- Second Item -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/my_journal"
                        android:textSize="16sp" />

                    <ImageView
                        android:id="@+id/my_journal"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_margin="16dp"
                        android:contentDescription="@string/app_logo"
                        app:srcCompat="@drawable/construction"
                        tools:ignore="ImageContrastCheck" />
                </LinearLayout>
            </LinearLayout>

            <!-- Second Row -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <!-- Second Item -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_journal"
                        android:textSize="16sp" />

                    <ImageView
                        android:id="@+id/add_journal"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_margin="16dp"
                        android:contentDescription="@string/add_journal"
                        app:srcCompat="@drawable/construction"
                        tools:ignore="ImageContrastCheck" />
                </LinearLayout>
            </LinearLayout>
            <Button
                android:id="@+id/back_button_click"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="80dp"
                android:backgroundTint="@color/journal_header"
                android:minHeight="48dp"
                android:text="@string/BackButton"
                android:textColor="#283593"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
